setup routes in api folder

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "my-express-server",
   "version": "1.0.0",
-  "description": "my first express server ",
+  "description": "my first restapi express server (A simple shop api)",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "Jerry",
   "license": "ISC",
